--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ body, html {
 .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
   position: relative;
   opacity: 0.65;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .bgimg-1 {
   background-image: url("jpg/797.jpg");
-  height: 170%;
+  height: 130%;
 }
 
 .bgimg-2 {
@@ -33,7 +33,7 @@ body, html {
 
 .bgimg-3 {
   background-image: url("jpg/7846.jpg");
-  height: 180%;
+  height: 110%;
 }
 
 .caption-1 {
@@ -43,31 +43,31 @@ body, html {
   width: 100%;
   text-align: center;
   color: #000;
-  font-size: 300%;
-  letter-spacing: 20px;
+  font-size: 400%;
+  letter-spacing: 0px;
   font: "Voltaire", voltaire;
 }
 
 .caption-2 {
   position: absolute;
   left: 50;
-  top: 41%;
+  top: 65%;
   width: 100%;
   text-align: center;
   color: #fff;
-  font-size: 200%;
+  font-size: 250%;
   letter-spacing: 10px;
 }
 
 .caption-3 {
   position: absolute;
   left: 0;
-  top: 40%;
+  top: 42%;
   width: 100%;
   text-align: center;
-  color: #fff;
+  color: #000;
   font-size: 300%;
-  letter-spacing: 10px;
+  letter-spacing: 30px;
 }
 
 
@@ -106,7 +106,7 @@ body, html {
 
 <div class="bgimg-3">
   <div class="caption-3">
-    Coming Soon.
+    Coming soon
   </div>
 </div>
 
