--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="main.js"></script>
 
 <div class="bgimg-1">
-    <div class="toptexts1" id="toptexts1">
+    <div class="fader1" id="fader1">
       <div class="caption-1">
     Peacemakr
   </div>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="bgimg-2">
-  <div class="toptexts2" id="toptexts2">
+  <div class="fader2" id="fader2">
   <div class="caption-2">
     Taming the wild wild west of crypto.
   </div>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="bgimg-3">
-  <div class="toptexts3" id="toptexts3">
+  <div class="fader3" id="fader3">
   <div class="caption-3">
     Coming soon
   </div>
