--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ public interface ICrypto {
 
 
 
-<ul><li>Up to 12,000 keys delivered every month*</li><li>Admin Control Panel, Desktop + Mobile</li><li>Active Key Lifecycle Management</li><li>Unlimited Crypto SDKs Integrations</li><li>Unlimited Key Rotations</li><li>Unlimited Key use, once delivered</li><li>Email Support</li></ul><p class="has-small-font-size">* Additional fees apply after 12,000 delivered keys</p>
+<ul><li>Up to 12,000 keys delivered every month*</li><li>Admin Control Panel, Desktop + Mobile</li><li>Active Key Lifecycle Management</li><li>Unlimited Crypto SDKs Integrations</li><li>Unlimited Key Rotations</li><li>Unlimited Key use, once delivered</li><li>Email Support</li></ul><p class="has-small-font-size">* An additional $54 for every additional 12,000 keys delivered within the month</p>
 </div>
 
 
