--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -12,8 +12,8 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 	Comments for Peacemakr	</title>
 	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://OFFLINEZIP.wpsho</link>
-	<description></description>
-	<lastBuildDate>2019-09-20 05:04:04</lastBuildDate>
+	<description>Encrypt Everything</description>
+	<lastBuildDate>2019-10-19 23:37:11</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
