--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -4,8 +4,9 @@
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
 	
-xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
-
+	xmlns:georss="http://www.georss.org/georss"
+	xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
+	
 	>
 <channel>
 	<title>
@@ -13,7 +14,7 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://OFFLINEZIP.wpsho</link>
 	<description>Encrypt Everything</description>
-	<lastBuildDate>2019-11-04 01:51:36</lastBuildDate>
+	<lastBuildDate>2019-11-06 15:40:22</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
