--- a/feed/index.html
+++ b/feed/index.html
@@ -6,15 +6,16 @@
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
 	xmlns:slash="http://purl.org/rss/1.0/modules/slash/"
 	
-xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
->
+	xmlns:georss="http://www.georss.org/georss"
+	xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
+	>
 
 <channel>
 	<title>Peacemakr</title>
 	<atom:link href="http://OFFLINEZIP.wpshofeed/" rel="self" type="application/rss+xml" />
 	<link>https://OFFLINEZIP.wpsho</link>
 	<description>Encrypt Everything</description>
-	<lastBuildDate>2019-11-04 01:51:36</lastBuildDate>
+	<lastBuildDate>2019-11-06 15:40:22</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
