Include latest media link

--- a/feed/index.html
+++ b/feed/index.html
@@ -15,7 +15,7 @@
 	<atom:link href="http://OFFLINEZIP.wpshofeed/" rel="self" type="application/rss+xml" />
 	<link>https://OFFLINEZIP.wpsho</link>
 	<description>Encrypt Everything</description>
-	<lastBuildDate>2019-12-04 02:06:48</lastBuildDate>
+	<lastBuildDate>Sun, 22 Dec 2019 17:20:42 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
