--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -14,7 +14,7 @@
 	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://OFFLINEZIP.wpsho</link>
 	<description>Encrypt Everything</description>
-	<lastBuildDate>2019-12-04 02:06:48</lastBuildDate>
+	<lastBuildDate>Sun, 22 Dec 2019 17:20:42 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
