--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ reducing costs and time-to-market.
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="https://peacemakr.io" class="peacemakr_light f3 fw2 peacemakr-hover no-underline white-90 dib">
+    <a href="https://peacemakr.io" class="f3 fw2 peacemakr_light_navlink no-underline peacemakr_hover">      
       Peacemakr
     </a>
     <div class="flex-l items-center">
@@ -221,7 +221,7 @@ reducing costs and time-to-market.
 <h3 id="secure-data-for-compliance">Secure Data, for Compliance</h3>
 <p>Peacemakr melts away sales barriers in SMB or Enterprise markets, with strict compliance in numerous regulations.</p>
 <ul>
-<li><input checked="" disabled="" type="checkbox">GDPA (General Data Protection Regulation)</li>
+<li><input checked="" disabled="" type="checkbox">GDPR (General Data Protection Regulation)</li>
 <li><input checked="" disabled="" type="checkbox">CCPA (California Consumer Privacy Act)</li>
 <li><input checked="" disabled="" type="checkbox">HIPAA (Health Insurance Portability and Accountability Act)</li>
 <li><input disabled="" type="checkbox">FedRAMP <em>(coming soon!)</em></li>
