--- a/services/index.html
+++ b/services/index.html
@@ -56,7 +56,7 @@
     <div class="pb3-m pb6-l peacemakr_dark_background">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="https://peacemakr.io" class="peacemakr_light f3 fw2 peacemakr-hover no-underline white-90 dib">
+    <a href="https://peacemakr.io" class="f3 fw2 peacemakr_light_navlink no-underline peacemakr_hover">      
       Peacemakr
     </a>
     <div class="flex-l items-center">
