--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ reducing costs and time-to-market.
 <p>Integrate Peacemakr to goto Market securely, today. Migrate to different threat models tomorrow.</p>
 <p>Use Peacemakr to secure data today, without committing to a specific threat model. Ship secure software faster, never hard-coding cryptographic decision into clients again.</p>
 <ul>
-<li><input checked="" disabled="" type="checkbox">Zero integration overhead, through a dead-simple interface.</li>
+<li><input checked="" disabled="" type="checkbox">No integration overhead, through a dead-simple interface.</li>
 <li><input checked="" disabled="" type="checkbox">Invite your customers to chose their threat model.</li>
 <li><input checked="" disabled="" type="checkbox">Migration key ownership at any time, with zero downtime.</li>
 </ul>
@@ -269,7 +269,7 @@ reducing costs and time-to-market.
 </table>
 <hr>
 <h2 id="learn-more">Learn More</h2>
-<h3 id="what-are-your-greatest-data-security-challenges">What are your greatest data security challenges?</h3>
+<h3 id="what-are-your-greatest-data-security-challenge">What are your greatest data security challenge?</h3>
 <!-- raw HTML omitted -->
 <h4><form action="https://formspree.io/mpzpvjrq" method="POST" class="w-100">
 <label align="left" class="peacemakr_dark">Your Name:
