--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ reducing costs and time-to-market.
 </table>
 <hr>
 <h2 id="learn-more">Learn More</h2>
-<h3 id="what-are-your-greatest-data-security-challenge">What are your greatest data security challenge?</h3>
+<h3 id="what-is-your-greatest-data-security-challenge">What is <em>your</em> greatest data security challenge?</h3>
 <!-- raw HTML omitted -->
 <h4><form action="https://formspree.io/mpzpvjrq" method="POST" class="w-100">
 <label align="left" class="peacemakr_dark">Your Name:
