--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ reducing costs and time-to-market.
 <li><input checked="" disabled="" type="checkbox">Forward Secrecy (with automated key rotation)</li>
 <li><input checked="" disabled="" type="checkbox">Tamper-Detection (with HMACs)</li>
 <li><input checked="" disabled="" type="checkbox">Cryptoagility (through open source SDKs)</li>
-<li><input checked="" disabled="" type="checkbox">Centralized control of all client (in an admin portal)</li>
+<li><input checked="" disabled="" type="checkbox">Centralized control of all clients (in an admin portal)</li>
 <li><input checked="" disabled="" type="checkbox">On-Prem, Cloud, or Hybrid Key Ownership</li>
 </ul>
 <hr>
