--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@ reduces costs and time-to-market.
     <!-- raw HTML omitted -->
 <h2 id="discover-why-businesses-choose-peacemakrs-secure-data-platform">Discover why businesses choose Peacemakr&rsquo;s Secure Data Platform.</h2>
 <form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper" border=0 height=40></form>
-<h2 id="attending-rsac-feb-24-28-2020">Attending RSAC Feb 24-28, 2020?</h2>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Meeting" border=0 height=40></form>
+<hr>
+<h1 id="attending-rsac-2020">Attending RSAC 2020?</h1>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting" border=0 height=40></form>
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
@@ -280,9 +281,9 @@ reduces costs and time-to-market.
     </tr>
         <tr>
         
-        <td><form action="https://admin.peacemakr.io" method="GET"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Sign Up Now" border=0 height=40></form></td>
+        <td><form action="https://admin.peacemakr.io" method="GET"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="button" value="Sign Up Now" border=0 height=40 onclick="location.href='https://admin.peacemakr.io'"></form></td>
 
-        <td><form action="mailto:sales@peacemakr.io?subject=Quote Request"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Quote" border=0 height=40></form></td>
+        <td><form action="mailto:sales@peacemakr.io"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="button" value="Request Quote" border=0 height=40 onclick="location.href='mailto:sales@peacemakr.io'"></form></td>
     </tr>
 </table>
 <hr>
