--- a/index.html
+++ b/index.html
@@ -214,11 +214,10 @@ reduces costs and time-to-market.
 <p>Integrate Peacemakr to goto Market securely, today. Migrate to different threat models tomorrow.</p>
 <p>Stop deliberating and start securing your data today without over-committing to a specific threat model. Ship secure software faster, never hard-coding cryptographic decision into clients again.</p>
 <ul>
-<li><input checked="" disabled="" type="checkbox">Integrate today, ship secure software tomorrow</li>
-<li><input checked="" disabled="" type="checkbox">No agreement on specific threat model required to ship secure software - adjust threat model after shipping, in admin portal</li>
-<li><input checked="" disabled="" type="checkbox">No integration overhead, through a dead-simple interface.</li>
-<li><input checked="" disabled="" type="checkbox">Invite your customers to chose their threat model.</li>
-<li><input checked="" disabled="" type="checkbox">Migration key ownership at any time, with zero downtime.</li>
+<li><input checked="" disabled="" type="checkbox">No integration overhead, through a dead-simple interface</li>
+<li><input checked="" disabled="" type="checkbox">Integrate and ship secure software today</li>
+<li><input checked="" disabled="" type="checkbox">Disagree on a threat model? Ship on time and finish discussion later, adjusting your threat model in admin portal</li>
+<li><input checked="" disabled="" type="checkbox">Secure defaults ensures no more wasting time to configure a new SaaS</li>
 </ul>
 <hr>
 <!-- raw HTML omitted -->
