--- a/media/index.html
+++ b/media/index.html
@@ -154,6 +154,11 @@
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><ul>
+<li>February 2, 2020</li>
+</ul>
+<p><a href="https://medium.com/@mcla0181/the-executive-brief-intel-sgx-hack-was-a-distraction-8929f756b9d5">The Executive Brief: Intel SGX Hack Was a Distraction.</a></p>
+<hr>
+<ul>
 <li>January 26, 2020</li>
 </ul>
 <p><a href="https://medium.com/@mcla0181/the-best-way-to-secure-data-in-python-1c23e0f5eb5d">The Best Way to Secure Data in Python</a></p>
