--- a/index.html
+++ b/index.html
@@ -188,17 +188,17 @@ reduces costs and time-to-market.
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-on-prem-private-cloud-saas-or-hybrid-root-of-trust">Secure Data, with On-Prem, Private-Cloud, SaaS, or Hybrid Root of Trust</h3>
-<p>Peacemakr Secure Data Platform enables you and your customers to decide the right threat model for yourselves. And when those decision changes, migrate - never disrupting your service. With our key lifecycle management,</p>
+<p>Peacemakr Secure Data Platform enables you and your customers to decide the right threat model for yourselves. And when your requirements change, migrate your root of trust - never disrupting your service. With our key lifecycle management,</p>
 <ul>
 <li><input checked="" disabled="" type="checkbox">Invite your customers to determine where their root of trust resides</li>
-<li><input checked="" disabled="" type="checkbox">Start in the cloud, migrate to on-prem later</li>
+<li><input checked="" disabled="" type="checkbox">Start in the cloud <!-- raw HTML omitted -->today<!-- raw HTML omitted -->, migrate to on-prem <!-- raw HTML omitted -->later<!-- raw HTML omitted --></li>
 <li><input checked="" disabled="" type="checkbox">Migrate anytime, in self-service admin portal</li>
 <li><input checked="" disabled="" type="checkbox">Say goodbye to HSM and SGX headaches on-prem</li>
 </ul>
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-correctly-the-first-time">Secure Data, Correctly the First Time</h3>
-<p>Peacemakr provides full data secure, to meet even the most rigorous customer&rsquo;s threat models. These include,</p>
+<p>Peacemakr provides full data secure, to meet even the most rigorous threat models. These include,</p>
 <ul>
 <li><input checked="" disabled="" type="checkbox">Data Privacy (with encryption)</li>
 <li><input checked="" disabled="" type="checkbox">Non-Repudiation (with signing)</li>
@@ -217,7 +217,7 @@ reduces costs and time-to-market.
 <li><input checked="" disabled="" type="checkbox">No integration overhead, through a dead-simple interface</li>
 <li><input checked="" disabled="" type="checkbox">Integrate and ship secure software today</li>
 <li><input checked="" disabled="" type="checkbox">Disagree on a threat model? Ship on time and finish discussion later, adjusting your threat model in admin portal</li>
-<li><input checked="" disabled="" type="checkbox">Secure defaults ensures no more wasting time to configure a new SaaS</li>
+<li><input checked="" disabled="" type="checkbox">Secure defaults ensure no more wasting time to configure a new SaaS</li>
 </ul>
 <hr>
 <!-- raw HTML omitted -->
