--- a/media/index.html
+++ b/media/index.html
@@ -156,7 +156,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><ul>
 <li>February 2, 2020</li>
 </ul>
-<p><a href="https://medium.com/@mcla0181/the-executive-brief-intel-sgx-hack-was-a-distraction-8929f756b9d5">The Executive Brief: Intel SGX Hack Was a Distraction.</a></p>
+<p><a href="https://medium.com/@mcla0181/the-executive-brief-intel-sgx-hack-was-a-distraction-8929f756b9d5">The Executive Brief: Intel SGX Hack Was a Distraction</a></p>
 <hr>
 <ul>
 <li>January 26, 2020</li>
