Update media and email-landing

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@ reduces costs and time-to-market.
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
     <!-- raw HTML omitted -->
 <h2 id="discover-why-businesses-choose-peacemakrs-secure-data-platform">Discover why businesses choose Peacemakr&rsquo;s Secure Data Platform.</h2>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper" border=0 height=40></form>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper: info@peacemakr.io" border=0 height=40></form>
 <hr>
 <h1 id="attending-rsac-2020">Attending RSAC 2020?</h1>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting" border=0 height=40></form>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting: info@peacemakr.io" border=0 height=40></form>
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
