--- a/media/index.html
+++ b/media/index.html
@@ -156,8 +156,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><ul>
 <li>February 10, 2020</li>
 </ul>
-<p>[Welcome to the Secure Data Revolution]
-(<a href="https://medium.com/@mcla0181/welcome-to-the-secure-data-revolution-5bf9e9920a2c">https://medium.com/@mcla0181/welcome-to-the-secure-data-revolution-5bf9e9920a2c</a>)</p>
+<p><a href="https://medium.com/@mcla0181/welcome-to-the-secure-data-revolution-5bf9e9920a2c">Welcome to the Secure Data Revolution</a></p>
 <hr>
 <ul>
 <li>February 2, 2020</li>
