--- a/index.html
+++ b/index.html
@@ -171,17 +171,19 @@ reduces costs and time-to-market.
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
     <!-- raw HTML omitted -->
 <h2 id="discover-why-businesses-choose-peacemakrs-secure-data-platform">Discover why businesses choose Peacemakr&rsquo;s Secure Data Platform.</h2>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper: info@peacemakr.io" border=0 height=40></form>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper" border=0 height=40></form>
 <hr>
 <h1 id="attending-rsac-2020">Attending RSAC 2020?</h1>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting: info@peacemakr.io" border=0 height=40></form>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting" border=0 height=40></form>
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
 <p>Peacemakr&rsquo;s Secure Data Platform has integrated with several open-source projects to provide turnkey Data Security solutions, including,</p>
 <ul>
+<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io">The Secure Data Platform</a></li>
 <li><input checked="" disabled="" type="checkbox"><a href="https://medium.com/@danielhuang37/encrypting-all-your-logs-in-2-easy-steps-using-logrotate-and-peacemakr-8ad9cbfe1b4c">Secure Logging Solution</a></li>
-<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io">Secure Data Distribution Solution</a></li>
+<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io/redis">Secure Redis Solution</a></li>
+<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io/peacemakr-cli">Secure Data Platform CLI</a></li>
 <li><input disabled="" type="checkbox">Secure S3 Object Solution <em>(coming soon!)</em></li>
 <li><input disabled="" type="checkbox">Secure Apache Spark <em>(coming soon!)</em></li>
 </ul>
@@ -232,10 +234,6 @@ reduces costs and time-to-market.
 </ul>
 <hr>
 <!-- raw HTML omitted -->
-<h3 id="secure-data-together">Secure Data, Together</h3>
-<p>Secure Data that works for you and your customers. Collaborate and share data with intended participants securely with Peacemakr, even across different organizations.</p>
-<hr>
-<!-- raw HTML omitted -->
 <h3 id="secure-data-for-compliance">Secure Data, for Compliance</h3>
 <p>Peacemakr melts away sales barriers in SMB or Enterprise markets, with strict compliance in numerous regulations.</p>
 <ul>
@@ -247,7 +245,11 @@ reduces costs and time-to-market.
 </ul>
 <hr>
 <!-- raw HTML omitted -->
-<h3 id="secure-data-delivered-at-scale">Secure Data, Delivered at Scale</h3>
+<h3 id="secure-collaborations">Secure Collaborations</h3>
+<p>Securely share data with intended participants seamlessly, even across different organizations. Forget &ldquo;bring-your-own-keys,&rdquo; invite your collaborators to bring-your-own-threat-model (and their keys).</p>
+<hr>
+<!-- raw HTML omitted -->
+<h3 id="secure-data-at-scale">Secure Data at Scale</h3>
 <p>Peacemakr scales with you so that you do not waste time supporting and scaling any secure data infrastructure.</p>
 <hr>
 <!-- raw HTML omitted -->
