--- a/index.html
+++ b/index.html
@@ -173,9 +173,6 @@ reduces costs and time-to-market.
 <h2 id="discover-why-businesses-choose-peacemakrs-secure-data-platform">Discover why businesses choose Peacemakr&rsquo;s Secure Data Platform.</h2>
 <form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper" border=0 height=40></form>
 <hr>
-<h1 id="attending-rsac-2020">Attending RSAC 2020?</h1>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Schedule 1-on-1 Meeting" border=0 height=40></form>
-<hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
 <p>Peacemakr&rsquo;s Secure Data Platform has integrated with several open-source projects to provide turnkey Data Security solutions, including,</p>
@@ -235,12 +232,13 @@ reduces costs and time-to-market.
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-for-compliance">Secure Data, for Compliance</h3>
-<p>Peacemakr melts away sales barriers in SMB or Enterprise markets, with strict compliance in numerous regulations.</p>
+<p>Peacemakr melts away sales barriers in SMB or Enterprise markets, by helping you acheive strict compliance with regulators.</p>
 <ul>
 <li><input checked="" disabled="" type="checkbox">GDPR (General Data Protection Regulation)</li>
 <li><input checked="" disabled="" type="checkbox">CCPA (California Consumer Privacy Act)</li>
 <li><input checked="" disabled="" type="checkbox">HIPAA (Health Insurance Portability and Accountability Act)</li>
-<li><input disabled="" type="checkbox">FedRAMP <em>(coming soon!)</em></li>
+<li><input checked="" disabled="" type="checkbox">PCI DSS (Payment Card Industry Data Security Standard)</li>
+<li><input disabled="" type="checkbox">FedRAMP  <em>(coming soon!)</em></li>
 <li><input disabled="" type="checkbox">FIPS 140-2 <em>(coming soon!)</em></li>
 </ul>
 <hr>
