--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@ reduces costs and time-to-market.
       
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
     <!-- raw HTML omitted -->
-<h2 id="discover-why-businesses-choose-peacemakrs-secure-data-platform">Discover why businesses choose Peacemakr&rsquo;s Secure Data Platform.</h2>
-<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Request Whitepaper" border=0 height=40></form>
+<h2 id="dont-have-a-cso">Don&rsquo;t have a CSO?</h2>
+<h2 id="we-have-you-covered">We have you covered.</h2>
+<form action="mailto:info@peacemakr.io?subject=Whitepaper" enctype="text/plain"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="submit" value="Start my Free Data Security Assessment" border=0 height=40></form>
 <hr>
 <!-- raw HTML omitted -->
 <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
