--- a/media/index.html
+++ b/media/index.html
@@ -154,6 +154,11 @@
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><ul>
+<li>May 25, 2020</li>
+</ul>
+<p><a href="https://medium.com/@mcla0181/3-signs-application-data-security-is-growing-up-9a9db52872d7">3 Signs Application Data Security Is Growing Up</a></p>
+<hr>
+<ul>
 <li>February 23, 2020</li>
 </ul>
 <p><a href="https://medium.com/@mcla0181/securing-data-in-redis-with-peacemakr-ff9d99056f0b">Securing Data in Redis with Peacemakr</a></p>
