--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ reduces costs and time-to-market.
             </ul></td>
     </tr>
     <tr>
-        <td><font class="peacemakr_gold">$5,250 / Month</font></td>
+        <td><font class="peacemakr_gold">Contact Us</font></td>
         <td><font class="peacemakr_gold">Contact Us</font></td>
     </tr>
         <tr>
