--- a/src/about_us.html
+++ b/src/about_us.html
@@ -250,7 +250,7 @@
             </div>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
