--- a/src/about_us.html
+++ b/src/about_us.html
@@ -63,13 +63,13 @@
                             </div>
                         </div>
                         <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
+                            <a href="/" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
 
-                            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
+                            <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
-                            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">About Us</a>
+                            <a href="about_us.html" class="font-medium text-gray-500 hover:text-gray-900">About Us</a>
 
-                            <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
+                            <a href="https://admin.peacemakr.io/#/login" class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
                         </div>
                     </nav>
                 </div>
