--- a/src/about_us.html
+++ b/src/about_us.html
@@ -183,11 +183,7 @@
         <div class="relative px-4 sm:px-6 lg:px-8">
             <div class="text-lg max-w-prose mx-auto">
                 <h2>
-                    <span
-                        class="block text-base text-center text-indigo-600 font-semibold tracking-wide uppercase">About
-                        Us</span>
-                    <span
-                        class="mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Team</span>
+                    <span class="mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Team</span>
                 </h2>
                 <p class="mt-8 text-xl text-gray-500 leading-8">We’re a Silicon Valley, CA bootstrapped startup with a 8
                     dedicated engineers, advisors, and security experts who are passionate about solving this problem
@@ -195,7 +191,7 @@
             </div>
 
             <div class="mt-6 prose prose-indigo prose-lg text-gray-500 mx-auto">
-                <h2>Core Values</h2>
+                <h2><span class="mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Core Values</span></h2>
                 <h3>Simplicity</h3>
                 <p>Time is your most valueable asset. Simple and elegant solutions to hard problems are the only way to
                     protect your time and your sanity.</p>
