index.html: - update language

--- a/src/index.html
+++ b/src/index.html
@@ -606,28 +606,42 @@
 
                         <div class="flex">
                             <!-- Heroicon name: check -->
-                            <svg class="flex-shrink-0 h-6 w-6 text-gray-500" xmlns="http://www.w3.org/2000/svg"
+                            <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
                                 fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7" />
                             </svg>
                             <div class="ml-3">
                                 <dt class="text-lg leading-6 font-medium text-gray-900">
-                                    Secure Data iOS SDK (Coming Soon)
+                                    Secure Data iOS SDK
                                 </dt>
                             </div>
                         </div>
 
                         <div class="flex">
                             <!-- Heroicon name: check -->
-                            <svg class="flex-shrink-0 h-6 w-6 text-gray-500" xmlns="http://www.w3.org/2000/svg"
+                            <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
                                 fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7" />
                             </svg>
                             <div class="ml-3">
                                 <dt class="text-lg leading-6 font-medium text-gray-900">
-                                    Secure Data Android SDK (Coming Soon)
+                                    Secure Data Android SDK
+                                </dt>
+                            </div>
+                        </div>
+
+                        <div class="flex">
+                            <!-- Heroicon name: check -->
+                            <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                                 fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M5 13l4 4L19 7" />
+                            </svg>
+                            <div class="ml-3">
+                                <dt class="text-lg leading-6 font-medium text-gray-900">
+                                    Secure Data NodeJS SDK
                                 </dt>
                             </div>
                         </div>
@@ -858,7 +872,7 @@
                                         </h3>
                                     </div>
                                     <p class="mt-5 text-lg text-gray-500">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perfect for small to medium size businesses
                                     </p>
                                 </div>
                                 <div
@@ -959,7 +973,7 @@
                                         </h3>
                                     </div>
                                     <p class="mt-5 text-lg text-gray-500">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                        Perfect for large size businesses
                                     </p>
                                 </div>
                                 <div
